FL401 validations updated